# Games101_Study

./: .gitignore  README.md
00-env/: main.cpp
01-env/: CMakeLists.txt  main.cpp
01-rotate_projection/: CMakeLists.txt  build-win64.sh  main.cpp  rasterizer.cpp
02-Triangles_Z_buffering/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
03-Pipeline_Shading/: CMakeLists.txt  Texture.hpp  main.cpp  models.7z  rasterizer.cpp  作业框架问题.txt
04-Geometry/: CMakeLists.txt  main.cpp
05-Ray_Tracing_1/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  main.cpp
06-Ray_Tracing_2/: CMakeLists.txt
06-Ray_Tracing_2/src/: BVH.cpp  BVH.hpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
07-Ray_Tracing_3/: CMakeLists.txt  build_win64.sh
07-Ray_Tracing_3/src/: BVH.cpp  Bounds3.hpp  Intersection.hpp  Material.hpp  Object.hpp  Scene.cpp  Sphere.hpp  Triangle.hpp
